@@ -2,6 +2,7 @@
   <ul class="nav navbar-nav navbar-right navbar-user">
     <li>Cluster: <span class="label label-cluster">{{cluster_name}}</span></li>
     <li>Version: <span ng-show="version">{{ version.number }}<span ng-show="version.snapshot">-SNAPSHOT-{{ version.hash }}</span></span></li>
+    <li>Nodes: <span class="label">{{ num_nodes }}</span></li>
     <li>Health: <span class="label {{cluster_color_label}}">{{cluster_state}}</span></li>
     <li>
       Load:
